Fix button group spacing
Differentiate button group spacing for primary and secondary buttons.

--- a/wdn/templates_5.0/scss/components/_components.button-groups.scss
+++ b/wdn/templates_5.0/scss/components/_components.button-groups.scss
@@ -3,6 +3,11 @@
 //////////////////////////////////////
 
 
-.unl .dcf-c-btn-group .dcf-c-btn + .dcf-c-btn {
+.unl .dcf-c-btn-group .dcf-c-btn--primary + .dcf-c-btn--primary {
+  margin-left: 2px;
+}
+
+
+.unl .dcf-c-btn-group .dcf-c-btn--secondary + .dcf-c-btn--secondary {
   margin-left: -2px;
 }
